2006-09-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/3262
	* elf.c (rewrite_elf_program_header): Use bfd_zalloc instead of
	bfd_alloc to allocate segment map.
	(copy_elf_program_header): Likewise.

2006-09-26  Mark Shinwell  <shinwell@codesourcery.com>
            Joseph Myers  <joseph@codesourcery.com>
            Ian Lance Taylor  <ian@wasabisystems.com>
            Ben Elliston  <bje@wasabisystems.com>

	* archures.c: Add definition for bfd_mach_arm_iWMMXt2.
	* cpu-arm.c (processors): Add bfd_mach_arm_iWMMXt2.
	(arch_info_struct, bfd_arm_update_notes): Likewise.
	(architectures): Likewise.
	(bfd_arm_merge_machines): Check for iWMMXt2.
	* bfd-in2.h: Rebuild.

2006-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2006-09-22  Alan Modra  <amodra@bigpond.net.au>

	* elfcode.h (elf_swap_symbol_in): Return bfd_boolean.  Don't abort
	on error.
	* elf-bfd.h (elf_size_info <swap_symbol_in>): Adjust decl.
	(bfd_elf32_swap_symbol_in, bfd_elf64_swap_symbol_in): Likewise.
	* elf.c (bfd_elf_get_elf_syms): Test return of swap_symbol_in,
	and report error.
	* elf32-arm.c (elf32_arm_swap_symbol_in): Return bfd_boolean.

2006-09-20  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* elf32-s390.c (elf_s390_relocate_section): Remove check for code
	section in LD to LE linker relaxation for R_390_TLS_LDO32.
	* elf64-s390.c (elf_s390_relocate_section): Likewise for
	R_390_TLS_LDO64.

2006-09-20  Kai Tietz  <Kai.Tietz@onevision.com>

	* configure.in:	Added new target-vectors x86_64coff_vec,
	x86_64pe_vec, and x86_64pei_vec.
	* configure: Regenerate.
	* config.bfd: Adjusted x86_64 target architecture detection.
	* bfd.c: Add for new target "coff-x86-64"
	(bfd_get_sign_extend): Add target vector idents for pe-x86-64. and pei-x86-64.
	* coff-x86_64.c: Add new file for x86_64 (AMD64) coff support.
	* libpei.h: Adjustments for COFF_WITH_pex64.
	* coffcode.h: Add for new target machine, architecture, signature, and internal
	signature handler.